# gba-sprite-engine

./: CMakeLists.txt  timespent.csv
demos/demo1-basicfeatures/src/: flying_stuff_scene.cpp  kul.h
demos/demo3-foodthrowing/src/: bullet.cpp
engine/include/libgba-sprite-engine/: gba_engine.h
engine/include/libgba-sprite-engine/background/: background.h
engine/include/libgba-sprite-engine/gba/: tonc_memdef.h
engine/include/libgba-sprite-engine/sprites/: sprite.h
engine/src/sprites/: sprite.cpp
maps/: affinemap.h
projectGame/: CMakeLists.txt  Todo.md  readme.md
projectGame/audio/: death.h  death.raw  hit.h  hit.raw  shot.h  shot.raw  spawn.h  spawn.raw
projectGame/pikseldata/: BulletHori.c  BulletVerti.c  BulletVerti.piskel  CharFull.c  CharFull7.piskel  CharFull8.piskel  EnemyFull.c  EnemyFull.piskel  Enemydownrun.piskel  game_bg.c  menu_bg.c  shared.c
projectGame/src/: Bullet.cpp  Bullet.h  Entity.cpp  Entity.h  bg1.h  bg_Chapter1.h  bg_Menu.h  enemies_Chapter1.h  enemies_level1.cpp  enemies_level1.h  enemy.cpp  enemy.h  main.cpp  manneke.h  pixel_bullets.h  pixel_menu.h  pixel_player.h  player.cpp  player.h  scene_Chapter1.cpp  scene_Chapter1.h  scene_death.cpp  scene_death.h  scene_start.cpp  scene_start.h  weapon.cpp  weapon.h
projectGame/src/Character/: FrontPlayer.c  FrontWalkingPlayer.c  SharedPlayer.c  SidewaysPlayer.c  SidewaysWalkingPlayer.c
